fix: node, asset title text overflow in inspector (#15176)
- show ellipsis when title text has exceeded its parent container

--- a/editor/inspector/contributions/node.css
+++ b/editor/inspector/contributions/node.css
@@ -50,6 +50,9 @@
 .header > .name,
 .component-header .name {
     flex: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .scene {
@@ -138,6 +141,8 @@
 
 .component .component-header {
     flex: 1;
+    min-width: 0;
+
     display: flex;
     align-items: center;
 }
